--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sitemap": "^8.0.0",
+    "swiper": "^11.2.6",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
