--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@phosphor-icons/react": "^2.1.7",
+    "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "sitemap": "^8.0.0",
     "swiper": "^11.2.6",
     "typewriter-effect": "^2.21.0"
