--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@phosphor-icons/react": "^2.1.7",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
